# artifacts/api-server/src/routes/index.ts
@@ -5,6 +5,8 @@ import visitsRouter from "./visits";
 import reportsRouter from "./reports";
 import paymentsRouter from "./payments";
 import adminRouter from "./admin";
+import reviewsRouter from "./reviews";
+import ownerRouter from "./owner";
 
 const router: IRouter = Router();
 
@@ -14,5 +16,7 @@ router.use("/visits", visitsRouter);
 router.use("/reports", reportsRouter);
 router.use("/payments", paymentsRouter);
 router.use("/admin", adminRouter);
+router.use("/reviews", reviewsRouter);
+router.use("/owner", ownerRouter);
 
 export default router;
